# m5stack-core-mp135-display

./: CLAUDE.md  README.md  pyproject.toml  theme.py
application/: application.py  indoor_air_data.py  main.py  simulator.py  timer_event.py  weather_data.py
driver/: constants.py  display.py  input_manager.py  utils.py
structures/: dataclasses.py  enums.py  menu.py
widgets/: air_quality_menu.py  bottom_bar.py  clickable.py  clock.py  container.py  icon.py  icons.py  indoor_air_page.py  label.py  layout.py  menu_indicator.py  menu_manager.py  outdoor_menu.py  outside_page.py  page_manager.py  power_page.py  renderer.py  system_page.py  top_bar.py  utils.py  value_unit.py  widget.py
