[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "m5stack-core-mp135-display"
version = "0.1.0"
description = "M5Stack Core MP135 Display Application"
requires-python = ">=3.10"

dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
development = [
    "ruff",
    "pyright",
]

deployment = [
    "evdev>=1.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # import sorting
    "B", # flake8-bugbear
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "Linux"

include = ["driver"]

exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.*",
]

reportMissingImports = "warning"
reportMissingTypeStubs = false